<resources>
    <!-- Application -->
    <string name="app_name">SysId Math</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_project_prefs" translatable="false">ProjectPrefsActivity</string>

    <!-- Navigation drawer -->
    <string name="title_drawer_opened">Navigation</string>
    <string name="title_item1">Dashboard</string>
    <string name="title_item2">Statistics</string>
    <string name="title_item3">Plots</string>
    <string name="title_item4">Settings</string>
    <string name="title_item5">About</string>

    <string name="title_header1">General</string>
    <string name="title_header2">Application</string>

    <!-- Main window -->
    <string name="tab_project">Project</string>
    <string name="tab_result">Result</string>



    <!-- Filebrowser -->
    <string name="btn_select_source_file">Select source file…</string>
    <string name="error_root_browse">Root browse not allowed!</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Project tab -->
    <string name="lbl_filename">Filename:</string>
    <string name="lbl_path">Path:</string>
    <string name="lbl_data_type">Data type:</string>
    <string name="lbl_length_source">Length:</string>
    <string name="btn_run">RUN</string>
    <string name="btn_add">ADD</string>

    <string name="box_datasource">DATASOURCE</string>
    <string name="box_preprocessing">PREPROCESSING</string>
    <string name="box_identification">IDENTIFICATION</string>
    <string name="box_load">LOAD</string>
    <string name="box_settings">SETTINGS</string>
    <string name="box_result">RESULT</string>
    <string name="box_stat_source">STATISTICS - SOURCE</string>
    <string name="box_stat_processed">STATISTICS - PROCESSED</string>

    <string name="activity_title_preprocessing">Preprocessing Settings</string>
    <string name="activity_title_identification">Identification Settings</string>
    <string name="loading_file">Loading file…</string>

    <!-- Preprocessing preferences -->
    <string name="pref_start">Start</string>
    <string name="pref_end">End</string>
    <string name="pref_edit">Edit</string>
    <string name="pref_multiplier_in">Input signal\n(siso)</string>
    <string name="pref_multiplier_out">Output signal\n(siso, timeseries)</string>
    <string name="pref_datarange_title">Data range</string>
    <string name="pref_datarange_summary">Select only fragment of datasource</string>
    <string name="pref_datarange_select_title">\tSet start and end</string>
    <string name="pref_filter">Filtering</string>
    <string name="pref_filter_freq_summary">Filtering in frequency domain</string>
    <string name="pref_filter_freq_title">Frequency filter</string>
    <string name="pref_filter_freq_type">\tFilter type</string>
    <string name="pref_filter_freq_values">\tFrequency band values</string>
    <string name="pref_lower">Lower</string>
    <string name="pref_upper">Upper</string>
    <string name="pref_normalization_title">Normalization</string>
    <string name="pref_scaling_title">Scaling</string>
    <string name="pref_scaling_values_title">\tSet multipliers</string>
    <string name="pref_scaling_and_removing">Scaling and removing</string>
    <string name="pref_avremoval_title">Average removal</string>
    <string name="pref_avremoval_summary">Remove average value from signal</string>
    <string name="pref_polyremoval_summary">Remove polynomial trend from signal</string>
    <string name="pref_polyremoval_order_title">\tSelect polynomial order</string>


    <!-- Identification preferences -->
    <string name="pref_select_model">Select only one model type</string>
    <string name="pref_parametric_model">Parametric model</string>
    <string name="pref_nonparametric_model">Nonparametric model</string>
    <string name="pref_siso_model">SISO model type</string>
    <string name="pref_timeseries_model">Timeseries model type</string>
    <string name="pref_model_structure">Structure</string>
    <string name="pref_forgetting_factor">Forgetting factor for RLS</string>



    <!-- Statistics -->
    <string name="stats_mean">Mean</string>
    <string name="stats_stddev">Standard deviation</string>
    <string name="stats_skewness">Skewness</string>
    <string name="stats_kurtosis">Kurtosis</string>
    <string name="stats_peakcoef">Peak coef</string>
    <string name="stats_input_signal">INPUT SIGNAL</string>
    <string name="stats_output_signal">OUTPUT SIGNAL</string>
    <string name="pref_polyremoval_title">Polynomial trend removal</string>
    <string name="pref_data_parameters">Data parameters</string>
    <string name="pref_forgetting_factor_label">Select number from 0 to 1</string>
    <string name="pref_sample_time">Sample time in seconds</string>

    <!-- Plots-->
    <string name="title_activity_plots">Plots</string>
    <string name="plot_menu_toggle_values">Toggle Values</string>
    <string name="plot_menu_toggle_circles">Toggle Circles</string>
    <string name="plot_menu_toggle_filled">Toggle Filled</string>
    <string name="plot_menu_toggle_cubic">Toggle Cubic</string>
    <string name="plot_menu_toggle_pinchzoom">Toggle PinchZoom</string>
    <string name="plot_menu_animate_x">Animate X</string>
    <string name="plot_menu_animate_y">Animate Y</string>
    <string name="plot_menu_animate_xy">Animate XY</string>
    <string name="plot_menu_save_to_sdcard">Save to SD-Card</string>
    <string name="toggle_source">Toggle source</string>
    <string name="toggle_processed">Toggle processed</string>
    <string name="fab_menu_plot_1">Output signal</string>
    <string name="fab_menu_plot_2">Input signal</string>
    <string name="fab_menu_plot_3">Autocorr</string>
    <string name="fab_menu_plot_4">Periodogram</string>
    <string name="plot_lbl_source">Source</string>
    <string name="plot_lbl_processed">Processed</string>
    <string name="activity_plots_title_pre">"Plots: "</string>
    <string name="plot_name_1">Output signal</string>
    <string name="plot_name_2">Input signal</string>
    <string name="plot_name_3">Autocorr</string>
    <string name="plot_name_4">PSD</string>
    <string name="plot_name_5">Nyquist</string>
    <string name="plot_saving_success">Saving SUCCESSFUL!</string>
    <string name="plot_saving_failed">Saving FAILED!</string>
    <string name="plot_info_provide_data">You need to provide data for the chart.</string>
    <string name="plot_info_no_chart">No chart data available.</string>



</resources>
